<resources>
    <string name="app_name">Movistar \nContigo</string>
    <string name="verification_display_dni">Número de DNI: </string>
    <string name="verification_display_ce">Número de C.E.: </string>
    <string name="verification_dialog_token_invalid">Debe ingresar el código de verificación de 5 dígitos</string>
    <string name="verification_loading_validating_token">Validando código</string>
    <string name="verification_error_validating_token">Se produjo un error al intentar validar el token</string>
    <string name="boton_texto_ingresar">Ingresar</string>
    <string name="texto_input_dni">Número de DNI/C.E.</string>
    <string name="login_hint_input">Ingresa tu número de DNI/C.E.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_texto_bienvenido">Bienvenido a</string>
    <string name="verificacion_boton_texto">Aceptar y continuar</string>
    <string name="verificacion_texto_titulo">Código\n de verificación</string>
    <string name="verificacion_descripcion">Se envío un mensaje de confirmación\n a tu correo electrónico</string>
    <string name="verificacion_desc_codigo">Ingresa el código de 5 dígitos</string>
    <string name="texto_splash_bienvenido">¡Bienvenido</string>
    <string name="splash_texto_descubre">¡Vive una experiencia digital única con Movistar!</string>
    <string name="splash_opciones_descuentos">Descuentos, novedades,\n trámites y más.</string>
    <string name="splash_texto_comenzar">Comenzar</string>
    <string name="texto_splash_usuario">Juan Peréz!</string>
    <string name="dashboard_noticias_titulo">Horario de verano</string>
    <string name="dashboard_noticias_descripcion">Comienza tu verano en la playa,\n en la playa. Oh sí!</string>
    <string name="dashboard_noticias_boton">Ver más</string>
    <string name="dashboard_beneficios_usuario">!Hola Juan!</string>
    <string name="dashboard_beneficios_descripcion">Las novedades que tenemos para ti</string>
    <string name="dash_title_descuentos">Descuentos</string>
    <string name="dash_title_estudios">Estudios</string>
    <string name="dash_title_open_learning">Open\nLearning</string>
    <string name="dash_title_embajador">Embajador</string>
    <string name="dash_title_salud">Salud</string>
    <string name="dash_title_beneficios_especiales">Especiales</string>
    <string name="dashboard_descuentos_titulo">Descuentos exclusivos</string>
    <string name="noticia_titulo_1">¡Comienza tu verano en la playa!</string>
    <string name="noticia_titulo_2">¡Última hora!</string>
    <string name="noticia_titulo_3">¡Vence al morro en la carrera de noche Movistar Run Night 2018!</string>
    <string name="noticia_titulo_4">¡Tu canasta navideña viene con todo este 2018!</string>
    <string name="noticia_titulo_5">¡Tu entrada al cine a solo S/3.00!</string>
    <string name="noticia_descripcion_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
        \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="noticia_descripcion_2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
    \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="noticia_descripcion_3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
    \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="noticia_descripcion_4">La cual contiene:
        \n* Caja de panetón Chocotón Dnodrio, 500 grs.
        \n* Botella de espumeante Omnium, 750 ml
        \n* Frasco deTapenade de Pimiento Casa Verde, 180 grs.
        \n* Frasco de Mermelada Gourmet de Arándano y Mango Casa Verde, 220 grs.
        \n* Estuche de Crocantinis tABLA gourmet, Sabores Surtidos, 40 grs.
        \n* Lata de Paté Español Coren, 18 grs.
        \n* Lata de Papitas Pringles Sabor Original, 37 grs.
        \n* Mini Refri Termoeéctrica 10 LT</string>
    <string name="noticia_descripcion_5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.
    \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s.</string>
    <string name="fecha_noticia">Viernes 18 de enero 2019</string>
    <string name="descripcion_maternidad_paternidad">Buscamos el bienestar de los colaboradores en los momentos más importantes de su vida, por ello, queremos acompañarte en el proceso. Si tienes un niño recién nacido, tienes:</string>
    <string name="descripcion_maternidad_paternidad_footer">Para acceder a estos beneficios, ingresa a la base de conocimiento y entérate qué debes gestionar previamente.</string>
    <string name="descripcion_defuncion">Ante el fallecimiento de un familiar directo o colaborador, Movistar otorga un apoyo para ti o tus beneficiarios.</string>
    <string name="defuncion_footer">Para acceder a estos beneficios, ingresa a la base de conocimiento y entérate qué debes gestionar previamente aquí.</string>
    <string name="descripcion_seguros">Movistar pone a tu disposición a AON, broker que te asesorará para la obtención de seguros particulares como SOAT, seguro vehicular, entre otros. Además, contarás con:</string>
    <string name="seguros_footer">Para mayor información, contacta a Marily Cervantes al 2030100 anexo 1178, al 989055873, o a marily.cervantes1@aon.com</string>
    <string name="seguros_bullet_1">Precios competitivos en el mercado.</string>
    <string name="seguros_bullet_2">Asesoramiento contínuo con un ejecutivo.</string>
    <string name="seguros_bullet_3">Posibilidad de descuentos por planilla.</string>
    <string name="defuncion_titular_1">Asignación por defunción de S/ 5,000.00.</string>
    <string name="cae_descripcion">Movistar pone a tu servicio el Centro de Atención al Empleado (CAE) para que puedas absolver dudas relacionadas a Recursos Humanos. Puedes contactarte con el CAE por los siguientes canales:</string>
    <string name="cae_ball_1">Base de conocimiento, en donde encontrarás artículos de interés, un chat y opción de envío de consultas a través de un formulario web.</string>
    <string name="cae_ball_2">Enviando desde tu correo corporativo tu consulta a: centrodeatencionalempleado@telefonicahelprh.zendesk.com, puedes ubicarlo como “CAE RH” en tu directorio de office 365.</string>
    <string name="remedy_descripcion">Utiliza Remedy para gestionar los siguientes requerimientos:</string>
    <string name="remedy_ball_1">Accesos al sistema de negocio.</string>
    <string name="remedy_ball_2">Instalaciones de aplicaciones en los equipos corporativos.</string>
    <string name="remedy_ball_3">Traslado de equipos, entre otros.</string>
    <string name="remedy_informacion_adicional">Puedes acceder a Remedy desde la intranet corporativa.</string>
    <string name="hint_nombre_apellido"><i>Nombre y apellido (*)</i></string>
    <string name="hint_dni"><i>DNI/CEX(*)</i></string>
    <string name="hint_telefono_contacto"><i>Teléfono de contacto (*)</i></string>
    <string name="hint_correo"><i>Correo electrónico</i></string>
    <string name="hint_telefono_consulta"><i>Teléfono en consulta</i></string>
    <string name="hint_correo_embajador"><i>Correo electrónico (*)</i></string>
    <string name="hint_celular"><i>Celular(*)</i></string>
    <string name="hint_descripcion"><i>Breve descripción del caso (*)</i></string>
    <string name="embajador_quiebres_descripcion_problema">Explícanos cuál es el problema. Para agilizar la atención, te recomendamos incluir información como: número de pedido y fecha en que se hizo el pedido.</string>
    <string name="salud_afiliaciones_eps_pt1">1.Completar la ficha de afiliación a la EPS, el formato carta Plan de Salud EPS y los requisitos especificados de acuerdo al tipo de afiliado.</string>
    <string name="salud_afiliaciones_eps_pt2">2.En la ficha de afiliación deberás llenar las secciones de: Entidad Empleadora, Datos de Titular, Dependientes (en caso de requerir), Declaración de Salud y responder a todas las preguntas. La ficha se debe enviar debidamente firmada.</string>
    <string name="salud_afiliaciones_eps_pt3">3.Si vienes de otra EPS, debes adjuntar la constancia de tu anterior seguro, indicando la fecha de inicio y fin de cobertura, así como la relación de diagnósticos que fueron cubiertos con tu póliza anterior. No es indispensable, pero si es importante para la afiliación.</string>
    <string name="salud_afiliaciones_eps_pt4">4.Registrar a tu dependientes correctamente en Success Factors.</string>
    <string name="salud_afiliaciones_eps_pt5">5.Antes de solicitar tu afiliación deberás tener en cuenta las fechas de corte de envío de la información a la compañía de seguros. Las fichas recibidas con la información se activarán según las siguientes fechas:
 1)Si envías tu ficha hasta el 22 del mes, tendrás cobertura desde el día 1 del mes en curso. 2)
Si envías tu ficha a partir del 23 hasta fin de mes, tendrás cobertura a partir del mes siguiente.
Se respetará la fecha 1 del mes en curso en casos de recién nacidos en el mes e ingresos nuevos en la empresa.
</string>
    <string name="salud_afiliaciones_eps_pt6">6.Entregar todos estos documentos en las siguientes direcciones: \n- Dean Valdivia 148 Torre A Piso 14, San Isidro. \n- Av. San Felipe 1144 Bloque C Piso 2, Surquillo. \n- En caso de estar en provincia, la entrega es a tu Gestor Zonal.</string>
    <string name="salud_afiliaciones_eps_pt7">En caso de querer excluirte o excluir a uno de tus dependientes de la póliza, como titular, deberás enviar la carta de desafiliación adjunto por correo al CAE y en físico a Dean Valdivia 148 Torre A Piso 14, San Isidro o a tu zonal. Con tu desafiliación quedan excluidos tus dependientes afiliados a la EPS y al Plan Oncológico.</string>
    <string name="salud_afiliaciones_lgbtiq_pt1">1.Debes completar la siguiente ficha de afiliación.</string>
    <string name="salud_afiliaciones_lgbtiq_pt2">2.Tener la declaración jurada simple notariada, la cual sustente su convivencia por 2 años a más, carta de plan firmada, declaración jurada de domicilio, certificado negativo de unión de hecho y las copias de DNI de cada uno. En caso de tener un seguro anterior EPS o particular con alguna cía de seguros, eliminar su periodo de carencia (3 meses).</string>
    <string name="salud_afiliaciones_lgbtiq_pt3">3.Entregar todos estos documentos en Dean Valdivia 148 Torre A Piso 14, San Isidro.</string>
    <string name="salud_afiliaciones_lgbtiq_pt4">4.La póliza estaría vigente desde el 1 de cada mes, pero se puede solicitar en cualquier fecha.</string>
    <string name="salud_afiliaciones_lgbtiq_pt5">En caso de querer excluirte de la póliza, como titular, deberás enviar una carta simple solicitando la desafiliación del plan al CAE y en físico a Dean Valdivia 148 Torre A Piso 14, San Isidro o a tu zonal.</string>
</resources>