<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/telefonica_regular"
        android:layout_marginBottom="16dp"
        android:text="Datos del Titular del servicio:"/>
    <EditText
        android:id="@+id/quiebre_formulario_etNombre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_nombre_apellido"
        android:inputType="text"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/quiebre_formulario_etDni"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_dni"
        android:inputType="number"
        android:maxLength="9"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/quiebre_formulario_etTelefonoContacto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_telefono_contacto"
        android:inputType="number"
        android:maxLength="9"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/quiebre_formulario_etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_correo"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/quiebre_formulario_etTelefonoConsulta"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_telefono_consulta"
        android:layout_marginBottom="16dp"
        android:maxLength="9"
        android:padding="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/telefonica_regular"
        android:layout_marginBottom="16dp"
        android:text="Datos del Embajador:"/>
    <EditText
        android:id="@+id/quiebre_formulario_etEmbajadorEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_correo_embajador"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/quiebre_formulario_etEmbajadorCelular"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:maxLength="9"
        android:layout_marginBottom="16dp"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_celular"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/quiebre_formulario_etEmbajadorDescripcion"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:inputType="textMultiLine"
        android:background="@drawable/embajador_quiebres_input"
        android:hint="@string/hint_descripcion"
        android:gravity="top"
        android:padding="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_bullet_info"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/telefonica_regular"
            android:textColor="#86888C"
            android:text="@string/embajador_quiebres_descripcion_problema"
            android:textSize="12sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/embajador_quiebres_btnRegistrarCaso"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/telefonica_regular"
        android:textColor="@android:color/white"
        android:background="@drawable/boton_vacaciones_verde"
        android:text="¡Registra tu caso!"/>
</LinearLayout>