<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt1"/>
    <TextView
        android:id="@+id/afiliacion_eps_tvFichaAfiliacion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Ficha de afiliación EPS"
        android:textSize="16sp"
        android:background="@drawable/boton_salud_rosado"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/telefonica_bold"/>
    <TextView
        android:id="@+id/afiliacion_eps_tvCartaPlan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="Carta del Plan de Salud EPS"
        android:textSize="16sp"
        android:background="@drawable/boton_salud_rosado"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:fontFamily="@font/telefonica_bold"/>
    <TextView
        android:id="@+id/afiliacion_eps_tvRequisitos"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="Requisitos según afiliado"
        android:textSize="16sp"
        android:background="@drawable/boton_salud_rosado"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:fontFamily="@font/telefonica_bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt4"/>

    <TextView
        android:id="@+id/afiliacion_eps_tvActualizacion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Actualización de dependientes"
        android:textSize="16sp"
        android:background="@drawable/boton_salud_rosado"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/telefonica_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt6"/>

    <TextView
        android:id="@+id/afiliacion_eps_tvListaGestores"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Lista de gestores zonales"
        android:textSize="16sp"
        android:background="@drawable/boton_salud_rosado"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/telefonica_bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telefonica_regular"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:text="@string/salud_afiliaciones_eps_pt7"/>
    <TextView
        android:id="@+id/afiliacion_eps_tvCartaDesafiliacion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Carta de desafiliación"
        android:textSize="16sp"
        android:background="@drawable/boton_salud_rosado"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/telefonica_bold"/>
</LinearLayout>