<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/marco_detalle"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/telefonica_regular"
        android:text="@string/remedy_descripcion"
        android:layout_margin="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHerramientas"
            android:fontFamily="@font/telefonica_bold"
            android:includeFontPadding="false"
            android:text="\u25CF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/telefonica_regular"
            android:paddingLeft="8dp"
            android:text="@string/remedy_ball_1"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHerramientas"
            android:fontFamily="@font/telefonica_bold"
            android:includeFontPadding="false"
            android:text="\u25CF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/telefonica_regular"
            android:paddingLeft="8dp"
            android:text="@string/remedy_ball_2"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHerramientas"
            android:fontFamily="@font/telefonica_bold"
            android:includeFontPadding="false"
            android:text="\u25CF"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/telefonica_regular"
            android:paddingLeft="8dp"
            android:text="@string/remedy_ball_3"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        style="@style/EstiloInfoAdicionalHerramienta"
        android:text="@string/remedy_informacion_adicional"/>
</LinearLayout>